--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="app">
 <head>
     <meta charset="UTF-8">
-    <title>File Upload Demo</title>
+    <title>XML Converter</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 
     <script type="text/javascript" src="app.module.js"></script>
@@ -15,7 +15,7 @@
 
 </head>
 <body ng-controller="FileUploadController">
-    <h2>File Upload Demo</h2>
+    <h1>VIRIATO XML Converter</h1>
 
     <div class="panel panel-default">
         <div class="panel-body">
