--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="panel-body">
             <form>
                 <div class="form-group">
-                    <label for="myFileField">Select a file: </label>
-                    <input type="file" demo-file-model="myFile"  class="form-control" id ="myFileField"/>
+                    <label for="myFileField">Select the files: </label>
+                    <input type="file" demo-file-model="myFile"  class="form-control" id ="myFileField" multiple/>
                 </div>
                 <button ng-click="uploadFile()" class = "btn btn-primary">Upload File</button>
             </form>
