file reader for text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <form>
                 <div class="form-group">
                     <label for="myFileField">Select the files: </label>
-                    <input type="file" demo-file-model="myFile"  class="form-control" id ="myFileField" multiple/>
+                    <input type="file" demo-file-model="myFile"  class="form-control" id ="myFileField" multiple accept="text/*,.csv"/>
                 </div>
                 <button ng-click="uploadFile()" class = "btn btn-primary">Upload File</button>
             </form>
