--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <title>XML Converter</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 
+    <script type="text/javascript" src="logger.js"></script>
     <script type="text/javascript" src="app.module.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
     <script type="text/javascript" src="directives.js"></script>
+
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -42,7 +44,6 @@
                     </form>
                 </div>
             </div>
-            <div>{{serverResponse}}</div>
             <p class="font-weight-bold">
               <span class="fa fa-copyright" aria-hidden="true"></span>
               2018 DB Netz AG, neXt Lab
